src/test/ui/const-generics/fn-const-param-call.full.stderr
error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-call.rs:11:25
   |
LL | struct Wrapper<const F: fn() -> u32>;
   |                         ^^^^^^^^^^^

error: using function pointers as const generic parameters is forbidden
  --> $DIR/fn-const-param-call.rs:13:15
   |
LL | impl<const F: fn() -> u32> Wrapper<F> {
   |               ^^^^^^^^^^^

error: aborting due to 2 previous errors

